--- a/BethanysPieShop.WebFrontEnd/wwwroot/index.html
+++ b/BethanysPieShop.WebFrontEnd/wwwroot/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>BethanysPieShop.WebFrontEnd</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script src="https://kit.fontawesome.com/273d0585ea.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet" />
     <link href="BethanysPieShop.WebFrontEnd.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" class="h-100">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
@@ -27,6 +29,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
